WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266186
REGRESSION (
270787@main
): Leak of two instance variables in _WKArchiveConfiguration
https://bugs.webkit.org/show_bug.cgi?id=266186
Summary
REGRESSION (270787@main): Leak of two instance variables in _WKArchiveConfigu...
David Kilzer (:ddkilzer)
Reported
2023-12-10 10:04:45 PST
Leak of two instance variables in _WKArchiveConfiguration. Found by clang static analyzer.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-10 10:05:02 PST
<
rdar://problem/119463815
>
David Kilzer (:ddkilzer)
Comment 2
2023-12-10 10:06:39 PST
This regressed with: Add SPI to allow excluding elements when saving web page resources
https://bugs.webkit.org/show_bug.cgi?id=264771
rdar://118342918
https://commits.webkit.org/270787@main
David Kilzer (:ddkilzer)
Comment 3
2023-12-10 10:08:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21602
EWS
Comment 4
2023-12-11 10:01:53 PST
Committed
271883@main
(0d14fc334556): <
https://commits.webkit.org/271883@main
> Reviewed commits have been landed. Closing PR #21602 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug