REGRESSION (270787@main): Leak of two instance variables in _WKArchiveConfiguration https://bugs.webkit.org/show_bug.cgi?id=266186 <rdar://119463815>

Reviewed by Darin Adler.

* Source/WebKit/UIProcess/API/Cocoa/_WKArchiveConfiguration.mm:
(-[_WKArchiveConfiguration dealloc]):
- Release the other two instance variables to fix the leaks.

Canonical link: https://commits.webkit.org/271883@main